welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:16: error: not found: value nombre_occurences
      													 nombres_occurences = nombre_occurences+1;
                                                                                                                              ^